--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 		<!-- ===== ABOUT SECTION END ===== -->
 
 		<!-- ===== BLOG SECTION START ===== -->
-		<section class="container-fluid px-0 blog-section">
+		<section class="container-fluid px-md-0 blog-section">
 			<div class="row">
 				<div class="col-md-12 col-lg-6 px-0 blog-section-image">
 					<img
@@ -363,14 +363,14 @@
 		<!-- ===== BLOG SECTION END ===== -->
 
 		<!-- ===== TESTIMONIALS SECTION START ===== -->
-		<section class="container-fluid px-0 testimonial-section">
+		<section class="container-fluid px-md-0 testimonial-section">
 			<div class="row">
 				<div
-					class="col-md-12 col-lg-6 px-0 text-center testimonial-section-text"
+					class="col-md-12 col-lg-6 px-md-0 text-center testimonial-section-text"
 				>
 					<h2 class="logo-font testimonial-section-text">Happy Campers</h2>
 					<p>
-						Read testimonials from customers that have enjoyed a Camper Hamper
+						Read testimonials from customers that have enjoyed a Camper Hamper	
 					</p>
 					<a
 						href="testimonials.html"
