--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
 					class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
 				>
 					<a href="/" class="nav-link main-logo-link logo-style"
-						>Fitness-Gym</a
+						><img width="75%" src="./assets/logo.png" alt="logo"></a
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
