--- a/blog.html
+++ b/blog.html
@@ -228,7 +228,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									All Hampers
+									Fitness Programs
 								</a>
 								<div
 									class="dropdown-menu border-0"
@@ -241,7 +241,7 @@
 										>By Category</a
 									>
 									<a href="products.html" class="logo-font dropdown-item"
-										>All Hampers</a
+										>Fitness Programs</a
 									>
 								</div>
 							</li>
@@ -254,7 +254,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Savoury
+									Supplements
 								</a>
 							</li>
 							<li class="nav-item">
@@ -265,7 +265,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Sweet
+									Merchandise
 								</a>
 							</li>
 							<li class="nav-item">
@@ -276,7 +276,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									CampFire
+									Online Coaching
 								</a>
 							</li>
 						</ul>
@@ -332,7 +332,7 @@
 							enjoy your hampers, and also here we will be posting experiences
 							our customers have had of going camping and taking one of our
 							Camper Hampers with them. Please visit again soon to read our
-							upcoming blog post on ways you can enjoy our CampFire Hamper.
+							upcoming blog post on ways you can enjoy our Online Coaching Hamper.
 							Happy camping!
 						</p>
 					</div>
@@ -354,7 +354,7 @@
 							href="products.html"
 							class="btn btn-outline-black rounded-0 btn-sm"
 						>
-							<span class="text-uppercase">View Hampers</span>
+							<span class="text-uppercase">View Programs</span>
 							<span class="icon">
 								<i class="fas fa-chevron-right" aria-hidden="true"></i>
 							</span>
@@ -409,7 +409,7 @@
 				</div>
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
-						<p>© CAMPER HAMPERS 2021 by Chloe Lewis MS4</p>
+						<p>© Fitness-Gym 2021 by Luke Duffy</p>
 					</div>
 				</div>
 			</footer>
