--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									All Hampers
+									Fitness Programs
 								</a>
 								<div
 									class="dropdown-menu border-0"
@@ -237,7 +237,7 @@
 									<a href="products.html" class="logo-font dropdown-item">By Price</a>
 									<a href="products.html" class="logo-font dropdown-item">By Category</a>
 									<a href="products.html" class="logo-font dropdown-item"
-										>All Hampers</a
+										>Fitness Programs</a
 									>
 								</div>
 							</li>
@@ -250,7 +250,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Savoury
+									Supplements
 								</a>
 							</li>
 							<li class="nav-item">
@@ -261,7 +261,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Sweet
+									Merchandise
 								</a>
 							</li>
 							<li class="nav-item">
@@ -272,7 +272,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									CampFire
+									Online Coaching
 								</a>
 							</li>
 						</ul>
@@ -288,23 +288,35 @@
 		<!-- ===== HEADER SECTION END ===== -->
 
 		<!-- ===== IMAGE SECTION START ===== -->
-		<section class="container-fluid" id="hero-image">
-			<div class="row">
+		<section class="container-fluid px-0 position-relative" id="hero-image">
+			<video poster="assets/banner.PNG" autoplay loop>
+				<source src="assets/banner.mp4" type="video/mp4">
+				<source src="assets/banner.mp4" type="video/ogg">
+				Your browser does not support the video tag.
+			</video>
+			<div class="overlay"></div>
+			<div class="row" id="hero-text">
 				<div class="col-12">
-					<div class="max-auto" id="hero-text">
-						<h1 class="logo-font">Fitness leads you to a better life.</h1>
-						<a
-							href="products.html"
-							class="
-								logo-font
-								shop-hampers-button
-								btn btn-lg
-								rounded-0
-								text-uppercase
-								py-3
-							"
-							>Shop Hampers</a
-						>
+					<div class="max-auto" >
+						<h1 class="logo-font"><span class="underlineTheme">Fitness</span> leads you to a better life.</h1>
+						<div class="d-flex justify-content-center">
+							<a
+								href="products.html"
+								class="
+								mt-3
+									logo-font
+									shop-hampers-button
+									text-uppercase
+									pt-2
+									pb-1
+									px-4
+									rounded									
+									font-weight-bold
+									text-decoration-none
+								"
+								>Get Started</a
+							>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -315,14 +327,10 @@
 		<section class="container about-section">
 			<div class="row text-center">
 				<div class="col">
-					<h2 class="logo-font">About</h2>
+					<h2 class="logo-font">Ab<span class="underlineTheme">out</span></h2>
 					<div class="text-center">
 						<p class="text-justify">
-							Camper Hampers provide the ultimate camping treat, remove the
-							hassle of food planning and instead enjoy one of our delicious
-							hampers! From artisan cheeses and breads, to breakfast patisseries
-							and treats around the campfire...we have you covered so you can
-							sit back, relax and really enjoy your adventure!
+							The greatest fitness app on the planet. Whether you’re looking to lose fat, build muscle, get stronger or improve performance, we’ve got you covered. With over 15 different training plans and hundreds of delicious meals, all customised to your individual needs, plus a free 7 day trial, there’s never been a better time to join the team.	
 						</p>
 					</div>
 				</div>
@@ -341,18 +349,22 @@
 					/>
 				</div>
 				<div class="col-md-12 col-lg-6 text-center blog-section-text">
-					<h2 class="logo-font">Read our blog</h2>
+					<h2 class="logo-font">Read our <span class="underlineTheme">blog</span></h2>
 					<p>
-						Read the latest camping ideas and thoughts from the Camper Hamper
-						owners!
+	Your diet doesn't have to be boring! Our meal plans are designed so that you love the food you eat whilst still hitting your goals.
 					</p>
 					<a
 						href="blog.html"
 						class="
 							logo-font
+							text-uppercase
+							pt-2
+							pb-1
+							px-4
+							logo-font
 							view-blog-button
 							btn btn-lg
-							rounded-0
+							rounded
 							text-uppercase
 						"
 						>View Blog</a
@@ -368,17 +380,22 @@
 				<div
 					class="col-md-12 col-lg-6 px-md-0 text-center testimonial-section-text"
 				>
-					<h2 class="logo-font testimonial-section-text">Happy Campers</h2>
-					<p>
-						Read testimonials from customers that have enjoyed a Camper Hamper	
+					<h2 class="logo-font testimonial-section-text">TESTIM<span class="underlineTheme">ONIALS</span></h2>
+					<p class="px-1 px-md-5">
+					Check out the hundreds of clients who have used my online coaching to get into the best shape of their lives.	
 					</p>
 					<a
 						href="testimonials.html"
 						class="
 							logo-font
+							text-uppercase
+							pt-2
+							pb-1
+							px-4
+							logo-font
 							view-blog-button
 							btn btn-lg
-							rounded-0
+							rounded
 							text-uppercase
 						"
 						>View Testimonials</a
@@ -439,7 +456,7 @@
 				</div>
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
-						<p>© CAMPER HAMPERS 2021 by Chloe Lewis MS4</p>
+						<p>© Fitness-Gym 2021 by Luke Duffy</p>
 					</div>
 				</div>
 			</footer>
