--- a/singleProduct.html
+++ b/singleProduct.html
@@ -58,7 +58,7 @@
 								class="form-control border-black rounded-0"
 								type="text"
 								name="q"
-								placeholder="Search Hampers"
+								placeholder="Search Programs"
 							/>
 							<div class="input-group-append">
 								<button
@@ -230,7 +230,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									All Hampers
+									Fitness Programs
 								</a>
 								<div
 									class="dropdown-menu border-0"
@@ -243,7 +243,7 @@
 										>By Category</a
 									>
 									<a href="products.html" class="logo-font dropdown-item"
-										>All Hampers</a
+										>Fitness Programs</a
 									>
 								</div>
 							</li>
@@ -256,7 +256,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Savoury
+									Supplements
 								</a>
 							</li>
 							<li class="nav-item">
@@ -267,7 +267,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Sweet
+									Merchandise
 								</a>
 							</li>
 							<li class="nav-item">
@@ -278,7 +278,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									CampFire
+									Online Coaching
 								</a>
 							</li>
 						</ul>
@@ -318,7 +318,7 @@
 
 							<p class="small mt-1 mb-0">
 								<a class="text-muted" href="/products/?category=sweet">
-									<i class="fas fa-tag mr-1" aria-hidden="true"></i>Sweet
+									<i class="fas fa-tag mr-1" aria-hidden="true"></i>Merchandise
 								</a>
 							</p>
 
@@ -449,7 +449,7 @@
 				</div>
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
-						<p>© CAMPER HAMPERS 2021 by Chloe Lewis MS4</p>
+						<p>© Fitness-Gym 2021 by Luke Duffy</p>
 					</div>
 				</div>
 			</footer>
