--- a/category.html
+++ b/category.html
@@ -230,7 +230,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									All Hampers
+									Fitness Programs
 								</a>
 								<div
 									class="dropdown-menu border-0"
@@ -243,7 +243,7 @@
 										>By Category</a
 									>
 									<a href="products.html" class="logo-font dropdown-item"
-										>All Hampers</a
+										>Fitness Programs</a
 									>
 								</div>
 							</li>
@@ -256,7 +256,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Savoury
+									Supplements
 								</a>
 							</li>
 							<li class="nav-item">
@@ -267,7 +267,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Sweet
+									Merchandise
 								</a>
 							</li>
 							<li class="nav-item">
@@ -278,7 +278,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									CampFire
+									Online Coaching
 								</a>
 							</li>
 						</ul>
@@ -298,7 +298,7 @@
 			<div class="container-fluid pb-4">
 				<div class="row">
 					<div class="col text-center mt-3">
-						<h2 class="logo-font">Hampers</h2>
+						<h2 class="logo-font">Prog<span class="underlineTheme">rams</span></h2>
 						<hr class="w-50 mb-1 mx-auto" />
 					</div>
 				</div>
@@ -336,7 +336,7 @@
 							<div class="col-12 col-md-6 order-md-first">
 								<p class="text-muted mt-3 text-center text-md-left">
 									<span class="small"
-										><a href="">Back to All Hampers</a> |
+										><a href="">Back to Fitness Programs</a> |
 									</span>
 
 									2 Products
@@ -367,7 +367,7 @@
 												<p class="small mt-1 mb-0">
 													<a class="text-muted" href="category.html">
 														<i class="fas fa-tag mr-1" aria-hidden="true"></i
-														>Sweet
+														>Merchandise
 													</a>
 												</p>
 											</div>
@@ -403,7 +403,7 @@
 												<p class="small mt-1 mb-0">
 													<a class="text-muted" href="category.html">
 														<i class="fas fa-tag mr-1" aria-hidden="true"></i
-														>Sweet
+														>Merchandise
 													</a>
 												</p>
 											</div>
@@ -471,7 +471,7 @@
 				</div>
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
-						<p>© CAMPER HAMPERS 2021 by Chloe Lewis MS4</p>
+						<p>© Fitness-Gym 2021 by Luke Duffy</p>
 					</div>
 				</div>
 			</footer>
