--- a/products.html
+++ b/products.html
@@ -228,7 +228,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									All Hampers
+									Fitness Programs
 								</a>
 								<div
 									class="dropdown-menu border-0"
@@ -237,7 +237,7 @@
 									<a href="products.html" class="logo-font dropdown-item">By Price</a>
 									<a href="products.html" class="logo-font dropdown-item">By Category</a>
 									<a href="products.html" class="logo-font dropdown-item"
-										>All Hampers</a
+										>Fitness Programs</a
 									>
 								</div>
 							</li>
@@ -250,7 +250,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Savoury
+									Supplements
 								</a>
 							</li>
 							<li class="nav-item">
@@ -261,7 +261,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Sweet
+									Merchandise
 								</a>
 							</li>
 							<li class="nav-item">
@@ -272,7 +272,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									CampFire
+									Online Coaching
 								</a>
 							</li>
 						</ul>
@@ -291,7 +291,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col text-center mt-3">
-					<h2 class="logo-font">Hampers</h2>
+					<h2 class="logo-font">Programs</h2>
 					<hr class="w-50 mb-1 mx-auto" />
 				</div>
 			</div>
@@ -355,7 +355,7 @@
 													href="products.html"
 												>
 													<i class="fas fa-tag mr-1" aria-hidden="true"></i
-													>Savoury
+													>Supplements
 												</a>
 											</p>
 										</div>
@@ -392,7 +392,7 @@
 													href=""
 												>
 													<i class="fas fa-tag mr-1" aria-hidden="true"></i
-													>Savoury
+													>Supplements
 												</a>
 											</p>
 										</div>
@@ -433,7 +433,7 @@
 													href=""
 												>
 													<i class="fas fa-tag mr-1" aria-hidden="true"></i
-													>Savoury
+													>Supplements
 												</a>
 											</p>
 										</div>
@@ -471,7 +471,7 @@
 											<p class="small mt-1 mb-0">
 												<a class="text-muted" href="">
 													<i class="fas fa-tag mr-1" aria-hidden="true"></i
-													>Sweet
+													>Merchandise
 												</a>
 											</p>
 										</div>
@@ -513,7 +513,7 @@
 											<p class="small mt-1 mb-0">
 												<a class="text-muted" href="">
 													<i class="fas fa-tag mr-1" aria-hidden="true"></i
-													>Sweet
+													>Merchandise
 												</a>
 											</p>
 										</div>
@@ -550,7 +550,7 @@
 													href=""
 												>
 													<i class="fas fa-tag mr-1" aria-hidden="true"></i
-													>CampFire
+													>Online Coaching
 												</a>
 											</p>
 										</div>
@@ -595,7 +595,7 @@
 													href=""
 												>
 													<i class="fas fa-tag mr-1" aria-hidden="true"></i
-													>CampFire
+													>Online Coaching
 												</a>
 											</p>
 										</div>
@@ -658,7 +658,7 @@
 				</div>
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
-						<p>© CAMPER HAMPERS 2021 by Chloe Lewis MS4</p>
+						<p>© Fitness-Gym 2021 by Luke Duffy</p>
 					</div>
 				</div>
 			</footer>
