--- a/testimonials.html
+++ b/testimonials.html
@@ -228,7 +228,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									All Hampers
+									Fitness Programs
 								</a>
 								<div
 									class="dropdown-menu border-0"
@@ -241,7 +241,7 @@
 										>By Category</a
 									>
 									<a href="products.html" class="logo-font dropdown-item"
-										>All Hampers</a
+										>Fitness Programs</a
 									>
 								</div>
 							</li>
@@ -254,7 +254,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Savoury
+									Supplements
 								</a>
 							</li>
 							<li class="nav-item">
@@ -265,7 +265,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									Sweet
+									Merchandise
 								</a>
 							</li>
 							<li class="nav-item">
@@ -276,7 +276,7 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
-									CampFire
+									Online Coaching
 								</a>
 							</li>
 						</ul>
@@ -391,7 +391,7 @@
 				</div>
 				<div class="col text-left">
 					<a href="products.html" class="btn btn-outline-black rounded-0 btn-sm">
-						<span class="text-uppercase">View Hampers</span>
+						<span class="text-uppercase">View Programs</span>
 						<span class="icon">
 							<i class="fas fa-chevron-right" aria-hidden="true"></i>
 						</span>
@@ -448,7 +448,7 @@
 				</div>
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
-						<p>© CAMPER HAMPERS 2021 by Chloe Lewis MS4</p>
+						<p>© Fitness-Gym 2021 by Luke Duffy</p>
 					</div>
 				</div>
 			</footer>
