--- a/blog.html
+++ b/blog.html
@@ -52,13 +52,13 @@
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-					<form method="GET" action="/products/">
+					<form  >
 						<div class="input-group w-100">
 							<input
 								class="form-control border-black rounded-0"
 								type="text"
-								name="q"
-								placeholder="Search Hampers"
+								
+								placeholder="Search Programs"
 							/>
 							<div class="input-group-append">
 								<button
@@ -146,12 +146,12 @@
 								class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0"
 								aria-labelledby="mobile-search"
 							>
-								<form class="form" method="GET" action="/products/">
+								<form class="form"  >
 									<div class="input-group w-100">
 										<input
 											class="form-control border border-black rounded-0"
 											type="text"
-											name="q"
+											
 											placeholder="Search our site"
 										/>
 										<div class="input-group-append">
@@ -250,7 +250,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="savoury-link"
+									id="supplements-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -261,7 +261,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="sweet-link"
+									id="merchandise-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -272,7 +272,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black"
-									id="campfire-link"
+									id="online-coaching-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -296,10 +296,11 @@
 			<div class="row">
 				<div class="col-12">
 					<hr />
-					<h2 class="logo-font mb-4">Camper Hampers Blog</h2>
+					<h2 class="logo-font mb-4">
+						TRANSFORMATIONS
+						LIVING PROOF</h2>
 					<h5 class="font-weight-bold">
-						Welcome to our camping blog packed full of inspiring ways to spend
-						more time in the great outdoors and of course enjoy our hampers!
+						Check out the hundreds of clients who have used my online coaching to get into the best shape of their lives.
 					</h5>
 					<hr />
 					<img
@@ -324,16 +325,8 @@
 					</div>
 					<div class="col-12">
 						<p>
-							Hello and welcome to our Camper Hampers blog! This is an
-							introductory blog post to let you know you can view this page in
-							the future to read about ideas, suggestions and updates from
-							Camper Hampers! We will be bringing you inspiration on where you
-							can enjoy going camping at this time of year, ideas for ways to
-							enjoy your hampers, and also here we will be posting experiences
-							our customers have had of going camping and taking one of our
-							Camper Hampers with them. Please visit again soon to read our
-							upcoming blog post on ways you can enjoy our Online Coaching Hamper.
-							Happy camping!
+							Hello and welcome to our blog!
+							The greatest fitness app on the planet. Whether you’re looking to lose fat, build muscle, get stronger or improve performance, we’ve got you covered. With over 20 different training plans and hundreds of delicious meals, all customised to your individual needs, plus a free 7 day trial, there’s never been a better time to join the team.
 						</p>
 					</div>
 					<div class="col-12">
@@ -383,7 +376,7 @@
 						>
 							<i class="fab fa-instagram social-icon" aria-hidden="true"></i>
 						</a>
-						<a href="mailto:camperhampers@example.com" class="footer-icon">
+						<a href="" class="footer-icon">
 							<i
 								class="fas fa-envelope-open social-icon"
 								aria-hidden="true"
