--- a/category.html
+++ b/category.html
@@ -52,13 +52,13 @@
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-					<form method="GET" action="/products/">
+					<form  >
 						<div class="input-group w-100">
 							<input
 								class="form-control border-black rounded-0"
 								type="text"
-								name="q"
-								placeholder="Search Hampers"
+								
+								placeholder="Search Programs"
 							/>
 							<div class="input-group-append">
 								<button
@@ -148,12 +148,12 @@
 								class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0"
 								aria-labelledby="mobile-search"
 							>
-								<form class="form" method="GET" action="/products/">
+								<form class="form"  >
 									<div class="input-group w-100">
 										<input
 											class="form-control border border-black rounded-0"
 											type="text"
-											name="q"
+											
 											placeholder="Search our site"
 										/>
 										<div class="input-group-append">
@@ -252,7 +252,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="savoury-link"
+									id="supplements-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -263,7 +263,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="sweet-link"
+									id="merchandise-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -274,7 +274,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black"
-									id="campfire-link"
+									id="online-coaching-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -338,7 +338,6 @@
 									<span class="small"
 										><a href="">Back to Fitness Programs</a> |
 									</span>
-
 									2 Products
 								</p>
 							</div>
@@ -350,12 +349,12 @@
 										<img
 											class="cardImg"
 											src="https://images.unsplash.com/photo-1594381898411-846e7d193883?ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8Zml0bmVzc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80"
-											alt="Breakfast Patisseries"
+											alt="LEAN BULKING PROGRAM"
 										/>
 									</a>
 
 									<div class="card-body pb-0">
-										<p class="mb-0">Breakfast Patisseries</p>
+										<p class="mb-0">LEAN BULKING PROGRAM</p>
 									</div>
 									<div class="card-footer bg-white pt-0 border-0 text-left">
 										<div class="row">
@@ -386,12 +385,12 @@
 										<img
 											class="cardImg"
 											src="https://images.pexels.com/photos/841135/pexels-photo-841135.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-											alt="Doughnuts"
+											alt="LIPSETT FIT PLAN"
 										/>
 									</a>
 
 									<div class="card-body pb-0">
-										<p class="mb-0">Doughnuts</p>
+										<p class="mb-0">LIPSETT FIT PLAN</p>
 									</div>
 									<div class="card-footer bg-white pt-0 border-0 text-left">
 										<div class="row">
@@ -443,7 +442,7 @@
 						>
 							<i class="fab fa-instagram social-icon" aria-hidden="true"></i>
 						</a>
-						<a href="mailto:camperhampers@example.com" class="footer-icon">
+						<a href="" class="footer-icon">
 							<i
 								class="fas fa-envelope-open social-icon"
 								aria-hidden="true"
