--- a/products.html
+++ b/products.html
@@ -52,13 +52,13 @@
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-					<form method="GET" action="/products/">
+					<form  >
 						<div class="input-group w-100">
 							<input
 								class="form-control border-black rounded-0"
 								type="text"
-								name="q"
-								placeholder="Search Hampers"
+								
+								placeholder="Search Programs"
 							/>
 							<div class="input-group-append">
 								<button
@@ -146,12 +146,12 @@
 								class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0"
 								aria-labelledby="mobile-search"
 							>
-								<form class="form" method="GET" action="/products/">
+								<form class="form"  >
 									<div class="input-group w-100">
 										<input
 											class="form-control border border-black rounded-0"
 											type="text"
-											name="q"
+											
 											placeholder="Search our site"
 										/>
 										<div class="input-group-append">
@@ -246,7 +246,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="savoury-link"
+									id="supplements-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -257,7 +257,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="sweet-link"
+									id="merchandise-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -268,7 +268,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black"
-									id="campfire-link"
+									id="online-coaching-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -337,7 +337,7 @@
 									<img
 										class="cardImg"
 										src="https://res.cloudinary.com/webstore/image/fetch/w_450,c_limit,c_fit,f_auto,e_trim/https%3A%2F%2Fae01.alicdn.com%2Fkf%2FH61450307da7c43688e9327ba3ab8eb6ev%2FMen-Workout-Gloves-Weight-Lifting-Body-Building-Exercise-Training-Fitness-Gym.jpg"
-										alt="Artisan Cheese Hamper"
+										alt="Body Building"
 									/>
 								</a>
 
@@ -374,7 +374,7 @@
 									<img
 										class="cardImg"
 										src="https://images.pexels.com/photos/841130/pexels-photo-841130.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-										alt="Artisan Bread Hamper"
+										alt="Body Building"
 									/>
 								</a>
 
@@ -415,7 +415,7 @@
 									<img
 										class="cardImg"
 										src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuIi990J7pLdF9qWJpaIkpSp2NCqeEIg7iHQ&usqp=CAU"
-										alt="Savoury Mix"
+										alt="Body Building"
 									/>
 								</a>
 
@@ -456,12 +456,12 @@
 									<img
 										class="cardImg"
 										src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH-kjrHShW2t4op7CHKHdnMjDPOsHVWoSTKw&usqp=CAU"
-										alt="Breakfast Patisseries"
+										alt="LEAN BULKING PROGRAM"
 									/>
 								</a>
 
 								<div class="card-body pb-0">
-									<p class="mb-0">Breakfast Patisseries</p>
+									<p class="mb-0">LEAN BULKING PROGRAM</p>
 								</div>
 								<div class="card-footer bg-white pt-0 border-0 text-left">
 									<div class="row">
@@ -498,12 +498,12 @@
 									<img
 										class="cardImg"
 										src="https://thumbs.dreamstime.com/b/sport-fitness-lifestyle-people-concept-smiling-men-women-stretching-gym-sport-fitness-lifestyle-people-concept-147152548.jpg"
-										alt="Doughnuts"
+										alt="LIPSETT FIT PLAN"
 									/>
 								</a>
 
 								<div class="card-body pb-0">
-									<p class="mb-0">Doughnuts</p>
+									<p class="mb-0">LIPSETT FIT PLAN</p>
 								</div>
 								<div class="card-footer bg-white pt-0 border-0 text-left">
 									<div class="row">
@@ -632,7 +632,7 @@
 						>
 							<i class="fab fa-instagram social-icon" aria-hidden="true"></i>
 						</a>
-						<a href="mailto:camperhampers@example.com" class="footer-icon">
+						<a href="" class="footer-icon">
 							<i
 								class="fas fa-envelope-open social-icon"
 								aria-hidden="true"
