--- a/register.html
+++ b/register.html
@@ -52,13 +52,13 @@
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-					<form method="GET" action="/products/">
+					<form  >
 						<div class="input-group w-100">
 							<input
 								class="form-control border-black rounded-0"
 								type="text"
-								name="q"
-								placeholder="Search Hampers"
+								
+								placeholder="Search Programs"
 							/>
 							<div class="input-group-append">
 								<button
@@ -146,12 +146,12 @@
 								class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0"
 								aria-labelledby="mobile-search"
 							>
-								<form class="form" method="GET" action="/products/">
+								<form class="form"  >
 									<div class="input-group w-100">
 										<input
 											class="form-control border border-black rounded-0"
 											type="text"
-											name="q"
+											
 											placeholder="Search our site"
 										/>
 										<div class="input-group-append">
@@ -250,7 +250,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="savoury-link"
+									id="supplements-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -261,7 +261,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="sweet-link"
+									id="merchandise-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -272,7 +272,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black"
-									id="campfire-link"
+									id="online-coaching-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -428,7 +428,7 @@
 						>
 							<i class="fab fa-instagram social-icon" aria-hidden="true"></i>
 						</a>
-						<a href="mailto:camperhampers@example.com" class="footer-icon">
+						<a href="" class="footer-icon">
 							<i
 								class="fas fa-envelope-open social-icon"
 								aria-hidden="true"
