--- a/singleProduct.html
+++ b/singleProduct.html
@@ -52,12 +52,12 @@
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-					<form method="GET" action="/products/">
+					<form  >
 						<div class="input-group w-100">
 							<input
 								class="form-control border-black rounded-0"
 								type="text"
-								name="q"
+								
 								placeholder="Search Programs"
 							/>
 							<div class="input-group-append">
@@ -148,12 +148,12 @@
 								class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0"
 								aria-labelledby="mobile-search"
 							>
-								<form class="form" method="GET" action="/products/">
+								<form class="form"  >
 									<div class="input-group w-100">
 										<input
 											class="form-control border border-black rounded-0"
 											type="text"
-											name="q"
+											
 											placeholder="Search our site"
 										/>
 										<div class="input-group-append">
@@ -252,7 +252,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="savoury-link"
+									id="supplements-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -263,7 +263,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
-									id="sweet-link"
+									id="merchandise-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -274,7 +274,7 @@
 								<a
 									href="category.html"
 									class="logo-font font-weight-bold nav-link text-black"
-									id="campfire-link"
+									id="online-coaching-link"
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
@@ -300,20 +300,20 @@
 					<div class="col-12 col-md-6 col-lg-4 offset-lg-2">
 						<div class="image-container my-5">
 							<a
-								href="https://camperhampers.s3.amazonaws.com/media/sweet_doughnuts.jpg"
+								href="https://camperhampers.s3.amazonaws.com/media/sweet_LIPSETT FIT PLAN.jpg"
 								target="_blank"
 							>
 								<img
 									class="card-img-top img-fluid"
-									src="https://camperhampers.s3.amazonaws.com/media/sweet_doughnuts.jpg"
-									alt="Doughnuts"
+									src="https://camperhampers.s3.amazonaws.com/media/sweet_LIPSETT FIT PLAN.jpg"
+									alt="LIPSETT FIT PLAN"
 								/>
 							</a>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="product-details-container mb-5 mt-md-5">
-							<p class="mb-0">Doughnuts</p>
+							<p class="mb-0">LIPSETT FIT PLAN</p>
 							<p class="lead mb-0 text-left font-weight-bold">$20.00</p>
 
 							<p class="small mt-1 mb-0">
@@ -323,7 +323,7 @@
 							</p>
 
 							<p class="mt-3">
-								8 doughnuts to be enjoyed! Salted caramel, strawberry, chocolate
+								8 LIPSETT FIT PLAN to be enjoyed! Salted caramel, strawberry, chocolate
 								and simply sugared...perfect for those with a sweet tooth.
 							</p>
 							<form class="form" action="/bag/add/5/" method="POST">
@@ -421,7 +421,7 @@
 						>
 							<i class="fab fa-instagram social-icon" aria-hidden="true"></i>
 						</a>
-						<a href="mailto:camperhampers@example.com" class="footer-icon">
+						<a href="" class="footer-icon">
 							<i
 								class="fas fa-envelope-open social-icon"
 								aria-hidden="true"
