--- a/singleProduct.html
+++ b/singleProduct.html
@@ -300,12 +300,12 @@
 					<div class="col-12 col-md-6 col-lg-4 offset-lg-2">
 						<div class="image-container my-5">
 							<a
-								href="https://camperhampers.s3.amazonaws.com/media/sweet_LIPSETT FIT PLAN.jpg"
+								href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH-kjrHShW2t4op7CHKHdnMjDPOsHVWoSTKw&usqp=CAU"
 								target="_blank"
 							>
 								<img
 									class="card-img-top img-fluid"
-									src="https://camperhampers.s3.amazonaws.com/media/sweet_LIPSETT FIT PLAN.jpg"
+									src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH-kjrHShW2t4op7CHKHdnMjDPOsHVWoSTKw&usqp=CAU"
 									alt="LIPSETT FIT PLAN"
 								/>
 							</a>
@@ -329,8 +329,6 @@
 							<form class="form" action="/bag/add/5/" method="POST">
 								<input
 									type="hidden"
-									name="csrfmiddlewaretoken"
-									value="Gp9HynclS6Hn6ur3EnfJSwXc8ZLHJYDZY8S7GLQIwkLi41xwOi6h7iVdxIFp2nKk"
 								/>
 								<div class="form-row">
 									<div class="col-12">
@@ -393,7 +391,6 @@
 									<input
 										type="hidden"
 										name="redirect_url"
-										value="/products/5/"
 									/>
 								</div>
 							</form>
