--- a/bag.html
+++ b/bag.html
@@ -42,12 +42,12 @@
 	</head>
 	<body>
 		<!-- ===== HEADER SECTION START ===== -->
-		<header class="container-fluid fixed-top">
+		<header class="container-fluid fixed-header">
 			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
 				<div
 					class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
 				>
-					<a href="/" class="nav-link main-logo-link logo-style"
+					<a href="/" class="nav-link main-link logo-styling"
 						><img width="75%" src="./assets/logo.png" alt="logo"></a
 					>
 				</div>
@@ -55,14 +55,14 @@
 					<form  >
 						<div class="input-group w-100">
 							<input
-								class="form-control border-black rounded-0"
+								class="form-control border-dark rounded-0"
 								type="text"
 								
 								placeholder="Search Programs"
 							/>
 							<div class="input-group-append">
 								<button
-									class="form-control btn btn-black border-black rounded-0"
+									class="form-control btn btn-black border-dark rounded-0"
 									type="submit"
 								>
 									<span class="icon">
@@ -149,7 +149,7 @@
 								<form class="form"  >
 									<div class="input-group w-100">
 										<input
-											class="form-control border border-black rounded-0"
+											class="form-control border border-dark rounded-0"
 											type="text"
 											
 											placeholder="Search our site"
@@ -159,7 +159,7 @@
 												class="
 													form-control form-control
 													btn btn-black
-													border border-black
+													border border-dark
 													rounded-0
 												"
 												type="submit"
