--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 	</head>
 	<body>
 		<!-- ===== HEADER SECTION START ===== -->
-		<header class="container-fluid fixed-top">
+		<header class="container-fluid fixed-header">
 			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
 				<div
 					class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
 				>
-					<a href="/" class="nav-link main-logo-link logo-style"
+					<a href="/" class="nav-link main-link logo-styling"
 						><img width="75%" src="./assets/logo.png" alt="logo"></a
 					>
 				</div>
@@ -55,13 +55,13 @@
 					<form  >
 						<div class="input-group w-100">
 							<input
-								class="form-control border-black rounded-0"
+								class="form-control border-dark rounded-0"
 								type="text"
 								placeholder="Search Programs"
 							/>
 							<div class="input-group-append">
 								<button
-									class="form-control btn btn-black border-black rounded-0"
+									class="form-control btn btn-black border-dark rounded-0"
 									type="submit"
 								>
 									<span class="icon">
@@ -148,7 +148,7 @@
 								<form class="form"  >
 									<div class="input-group w-100">
 										<input
-											class="form-control border border-black rounded-0"
+											class="form-control border border-dark rounded-0"
 											type="text"
 											placeholder="Search our site"
 										/>
@@ -157,7 +157,7 @@
 												class="
 													form-control form-control
 													btn btn-black
-													border border-black
+													border border-dark
 													rounded-0
 												"
 												type="submit"
@@ -346,7 +346,7 @@
 						alt="Body Building"
 					/>
 				</div>
-				<div class="col-md-12 col-lg-6 text-center blog-section-text">
+				<div class="col-md-12 col-lg-6 text-center blog-section-txt">
 					<h2 class="logo-font">Read our <span class="underlineTheme">blog</span></h2>
 					<p>
 	Your diet doesn't have to be boring! Our meal plans are designed so that you love the food you eat whilst still hitting your goals.
@@ -360,7 +360,7 @@
 							pb-1
 							px-4
 							logo-font
-							view-blog-button
+							view-blog-btn
 							btn btn-lg
 							rounded
 							text-uppercase
@@ -391,7 +391,7 @@
 							pb-1
 							px-4
 							logo-font
-							view-blog-button
+							view-blog-btn
 							btn btn-lg
 							rounded
 							text-uppercase
