--- a/testimonials.html
+++ b/testimonials.html
@@ -42,12 +42,12 @@
 	</head>
 	<body>
 		<!-- ===== HEADER SECTION START ===== -->
-		<header class="container-fluid fixed-top">
+		<header class="container-fluid fixed-header">
 			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
 				<div
 					class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
 				>
-					<a href="/" class="nav-link main-logo-link logo-style"
+					<a href="/" class="nav-link main-link logo-styling"
 						><img width="75%" src="./assets/logo.png" alt="logo"></a
 					>
 				</div>
@@ -55,14 +55,14 @@
 					<form  >
 						<div class="input-group w-100">
 							<input
-								class="form-control border-black rounded-0"
+								class="form-control border-dark rounded-0"
 								type="text"
 								
 								placeholder="Search Programs"
 							/>
 							<div class="input-group-append">
 								<button
-									class="form-control btn btn-black border-black rounded-0"
+									class="form-control btn btn-black border-dark rounded-0"
 									type="submit"
 								>
 									<span class="icon">
@@ -149,7 +149,7 @@
 								<form class="form"  >
 									<div class="input-group w-100">
 										<input
-											class="form-control border border-black rounded-0"
+											class="form-control border border-dark rounded-0"
 											type="text"
 											
 											placeholder="Search our site"
@@ -159,7 +159,7 @@
 												class="
 													form-control form-control
 													btn btn-black
-													border border-black
+													border border-dark
 													rounded-0
 												"
 												type="submit"
@@ -316,14 +316,13 @@
 					<div class="card card-style-testimonial border-secondary mb-4">
 						<div class="card-body text-center">
 							<p class="font-weight-bold text-uppercase logo-font">
-								<i class="fas fa-campground" aria-hidden="true"></i>Wonderful
+								<i class="fab fa-servicestack mr-2"></i>Wonderful
 								service
 							</p>
 							<p>
-								I was so happy with Camper Hampers. The cheese hamper was
-								delicious. We will definitely be ordering more in the future!
+									I just wanna say thanks for everything man from start to finish you have really helped me get an understanding of how to cut properly. All my questions have been answered and I feel that I now can go on by myself and continue on in the cut for another for weeks.
 							</p>
-							<p class="font-italic">By Nadia</p>
+							<p class="font-italic">By Stephen</p>
 						</div>
 					</div>
 				</div>
@@ -333,14 +332,12 @@
 						<div class="card-body text-center">
 							<p class="font-weight-bold text-uppercase logo-font">
 								<i class="fas fa-campground" aria-hidden="true"></i>Brilliant
-								hamper
+								Training
 							</p>
 							<p>
-								We ordered the campfire drinks hamper for our camping weekend.
-								We enjoyed it over a couple of nights....would definitely
-								recommend!
+								I've got another 3 weeks till my holiday so I'm going to stick to the macros for that time then have a rest but minimise the damage done on holiday then cut down again for summer. I can't thank you enough for the help and what you have taught me it is definitely a sustainable way of living and I'm keen to see what changes will happen in even a years time. Once again thanks.
 							</p>
-							<p class="font-italic">By Coumb</p>
+							<p class="font-italic">By Macc</p>
 						</div>
 					</div>
 				</div>
@@ -350,15 +347,12 @@
 						<div class="card-body text-center">
 							<p class="font-weight-bold text-uppercase logo-font">
 								<i class="fas fa-campground" aria-hidden="true"></i>Speedy
-								delivery
+								weight loose
 							</p>
 							<p>
-								Thank you to everyone at Camper Hampers! We placed our order and
-								true to their word our hamper arrived 3 days later, which was
-								perfect timing for our trip! Will definitely use again for
-								future trips.
+								Looking back on my first picture I sent to you makes me realise how far I've gotten in this cut.Starting at 87kg and now at around 75kg. I'm so happy with the results. Thanks for everything man and hopefully we can talk again someday
 							</p>
-							<p class="font-italic">By Geraldine</p>
+							<p class="font-italic">By Nepthew</p>
 						</div>
 					</div>
 				</div>
@@ -367,15 +361,13 @@
 					<div class="card card-style-testimonial border-secondary mb-4">
 						<div class="card-body text-center">
 							<p class="font-weight-bold text-uppercase logo-font">
-								<i class="fas fa-campground" aria-hidden="true"></i>Campfire
-								treats amazing
+								<i class="fas fa-campground" aria-hidden="true"></i>Amazing
+								Training
 							</p>
 							<p>
-								We enjoyed our campfire hamper. We toasted marshmallows around
-								the fire and had a great evening snacking on the delicious
-								contents in the hamper. Made it a night to remember!
+								It's the end of my 6 weeks and I have just stood on the scales and have dropped to 11st 10.5lbs. I have really enjoyed the training and being able to track and eat what foods I want so I'm not craving and then end up having a big binge
 							</p>
-							<p class="font-italic">By Steve</p>
+							<p class="font-italic">By Stevenson</p>
 						</div>
 					</div>
 				</div>
