--- a/category.html
+++ b/category.html
@@ -250,7 +250,7 @@
 
 							<li class="nav-item">
 								<a
-									href="category.html"
+									href="supplements.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
 									id="supplements-link"
 									aria-haspopup="true"
@@ -261,7 +261,7 @@
 							</li>
 							<li class="nav-item">
 								<a
-									href="category.html"
+									href="merchandise.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
 									id="merchandise-link"
 									aria-haspopup="true"
