--- a/forget.html
+++ b/forget.html
@@ -248,7 +248,7 @@
 
 							<li class="nav-item">
 								<a
-									href="category.html"
+									href="supplements.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
 									id="supplements-link"
 									aria-haspopup="true"
@@ -259,7 +259,7 @@
 							</li>
 							<li class="nav-item">
 								<a
-									href="category.html"
+									href="merchandise.html"
 									class="logo-font font-weight-bold nav-link text-black mr-5"
 									id="merchandise-link"
 									aria-haspopup="true"
