--- a/blog.html
+++ b/blog.html
@@ -43,12 +43,12 @@
 	<body>
 		<!-- ===== HEADER SECTION START ===== -->
 		<header class="container-fluid fixed-header">
-			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex align-items-center">
 				<div
 					class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
 				>
 					<a href="/" class="nav-link main-link logo-styling"
-						><img width="75%" src="./assets/logo.png" alt="logo"></a
+						>Luke Duffy <span class="underlineTheme"> Fitness</span></a
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -297,7 +297,9 @@
 				<div class="col-12">
 					<hr />
 					<h2 class="logo-font mb-4">
-						TRANSFORMATIONS
+						<span class="underlineTheme">
+							TRANSFORMATIONS
+						</span>
 						LIVING PROOF</h2>
 					<h5 class="font-weight-bold">
 						Check out the hundreds of clients who have used my online coaching to get into the best shape of their lives.
@@ -316,11 +318,11 @@
 			<div class="row card card-style-blog">
 				<div class="card-body">
 					<div class="col-12 text-center">
-						<i class="fas fa-campground" aria-hidden="true"></i>
+						<i class="fas fa-dumbbell mr-2"></i></i>
 					</div>
 					<div class="col-12">
 						<p class="font-weight-bold text-uppercase logo-font text-center">
-							Welcome to our blog
+							<span class="underlineTheme">Welcome</span> to our blog
 						</p>
 					</div>
 					<div class="col-12">
