--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 	<body>
 		<!-- ===== HEADER SECTION START ===== -->
 		<header class="container-fluid fixed-header">
-			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex align-items-center">
 				<div
 					class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
 				>
 					<a href="/" class="nav-link main-link logo-styling"
-						><img width="75%" src="./assets/logo.png" alt="logo"></a
+						>Luke Duffy <span class="underlineTheme"> Fitness</span></a
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -413,7 +413,10 @@
     <!-- ===== FOOTER SECTION START ===== -->
 			<footer class="container-fluid" id="footer">
 				<div class="row text-center text-black footer-icons">
-					<div class="col">
+					<div class="col-12 mt-4">
+						<h3 class="font-weight-bold logo-font">LUKE DUFFY <span class="underlineTheme"> FITNESS</span></h3>
+					</div>
+					<div class="col mt-1">
 						<a
 							href="https://www.facebook.com/"
 							target="_blank"
@@ -434,16 +437,19 @@
 								aria-hidden="true"
 							></i>
 						</a>
+						<a href="https://twitter.com/" class="footer-icon">
+							<i class="fab fa-twitter social-icon" aria-hidden="true"></i>
+						</a>
 					</div>
 				</div>
-				<div class="row text-center text-black footer-links">
+				<div class="row text-center text-black footer-links mt-3">
 					<div class="col">
 						<a href="testimonials.html" class="text-uppercase font-weight-bold footer-links"
 							>View Testimonials</a
 						>
 					</div>
 				</div>
-				<div class="row text-center text-black footer-links">
+				<!-- <div class="row text-center text-black footer-links">
 					<div class="col">
 						<a
 							href="blog.html"
@@ -451,7 +457,7 @@
 							>View Blog</a
 						>
 					</div>
-				</div>
+				</div> -->
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
 						<p>© Fitness-Gym 2021 by Luke Duffy</p>
