--- a/testimonials.html
+++ b/testimonials.html
@@ -43,12 +43,12 @@
 	<body>
 		<!-- ===== HEADER SECTION START ===== -->
 		<header class="container-fluid fixed-header">
-			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex align-items-center">
 				<div
 					class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
 				>
 					<a href="/" class="nav-link main-link logo-styling"
-						><img width="75%" src="./assets/logo.png" alt="logo"></a
+						>Luke Duffy <span class="underlineTheme"> Fitness</span></a
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -296,7 +296,7 @@
 			<div class="row">
 				<div class="col-12">
 					<hr />
-					<h2 class="logo-font mb-4">Customer Testimonials</h2>
+					<h2 class="logo-font mb-4">Customer <span class="underlineTheme">Testimonials</span></h2>
 					<h5 class="font-weight-bold">
 						View feedback from our customers below
 					</h5>
@@ -316,7 +316,7 @@
 					<div class="card card-style-testimonial border-secondary mb-4">
 						<div class="card-body text-center">
 							<p class="font-weight-bold text-uppercase logo-font">
-								<i class="fab fa-servicestack mr-2"></i>Wonderful
+								<i class="fas fa-dumbbell mr-2"></i></i>Wonderful
 								service
 							</p>
 							<p>
@@ -331,7 +331,7 @@
 					<div class="card card-style-testimonial border-secondary mb-4">
 						<div class="card-body text-center">
 							<p class="font-weight-bold text-uppercase logo-font">
-								<i class="fas fa-campground" aria-hidden="true"></i>Brilliant
+								<i class="fas fa-dumbbell mr-2"></i>Brilliant
 								Training
 							</p>
 							<p>
@@ -346,7 +346,7 @@
 					<div class="card card-style-testimonial border-secondary mb-4">
 						<div class="card-body text-center">
 							<p class="font-weight-bold text-uppercase logo-font">
-								<i class="fas fa-campground" aria-hidden="true"></i>Speedy
+								<i class="fas fa-dumbbell mr-2"></i>Speedy
 								weight loose
 							</p>
 							<p>
@@ -361,7 +361,7 @@
 					<div class="card card-style-testimonial border-secondary mb-4">
 						<div class="card-body text-center">
 							<p class="font-weight-bold text-uppercase logo-font">
-								<i class="fas fa-campground" aria-hidden="true"></i>Amazing
+								<i class="fas fa-dumbbell mr-2"></i>Amazing
 								Training
 							</p>
 							<p>
