--- a/supplements.html
+++ b/supplements.html
@@ -43,12 +43,12 @@
 	<body>
 		<!-- ===== HEADER SECTION START ===== -->
 		<header class="container-fluid fixed-header">
-			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex align-items-center">
 				<div
 					class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
 				>
 					<a href="/" class="nav-link main-link logo-styling"
-						><img width="75%" src="./assets/logo.png" alt="logo"></a
+						>Luke Duffy <span class="underlineTheme"> Fitness</span></a
 					>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
